Fix margins and alignments

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/SSO/Content/Css/newLogin.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/SSO/Content/Css/newLogin.css
@@ -27,6 +27,10 @@ h1 {
 	font-weight: bold;
 }
 
+.con-flex {
+	padding: 0;
+}
+
 .panel {
 	padding: 20px 40px;
 	margin: 10px;
@@ -39,6 +43,8 @@ h1 {
 	border: none;
 	border-radius: 22px;
 	color: #fff;
+	text-align: center;
+	margin: 0 10px;
 }
 
 .login-message .alert-warning,
@@ -48,12 +54,13 @@ h1 {
 	border: none;
 	border-radius: 22px;
 	color: rgba(0, 0, 0, 0.8) !important;
+	text-align: center;
+	margin: 0 10px;
 }
 
 #Password-change-success,
 #Password-change-error {
 	margin-top: 20px;
-	text-align: center;
 }
 
 .login-form {
@@ -165,6 +172,14 @@ h1 {
 	.con-flex {
 		flex: 1;
 	}
+
+	.wfm-checkbox {
+		text-align: left;
+	}
+
+	.signin_forgot_password {
+		text-align: right;
+	}
 }
 
 @media screen and (max-width: 728px) {
@@ -177,18 +192,19 @@ h1 {
 	.con-flex {
 		flex: 1 1 auto;
 	}
+
+	.signin_forgot_password {
+		margin-top: 10px;
+	}
 }
 
 @media screen and (max-height: 414px), screen and (max-width: 414px) and (max-height: 800px) {
-	.con-flex {
-		padding: 0;
-	}
 
 	.panel {
-		padding: 10px;
+		padding: 10px 20px;
 	}
 
 	.wfm-form .form-input-wrap {
-		padding: 5px;
+		padding: 5px 0;
 	}
 }
